# event_udp_to_kafka

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  config.example.toml  crates.js  docker-compose.yaml  help.html  index.html  settings.html  src-files.js
.github/: release.yml
.github/workflows/: build-nightly.yml  build.yml  containerfile-upload.yml  dependabot-prs.yml
benches/: event_processing.rs
event_udp_to_kafka/: all.html  fn.kafka_udp_process.html  fn.read_csv.html  fn.udp_process.html  index.html  sidebar-items.js  struct.Args.html  struct.WiringConfigRecord.html
event_udp_to_kafka/config/: index.html  sidebar-items.js  struct.EventUdpToKafkaConfig.html
event_udp_to_kafka/data_processing/: fn.process_udp_bytes_to_kafka.html  fn.process_udp_to_kafka.html  index.html  sidebar-items.js
event_udp_to_kafka/gps_time/: index.html  sidebar-items.js  struct.GpsTime.html
event_udp_to_kafka/metrics/: constant.INCOMING_UDP_HEADERS.html  constant.INCOMING_UDP_INVALID_HEADER_DECLARED_LENGTH_TOO_LONG.html  constant.INCOMING_UDP_INVALID_HEADER_DECLARED_LENGTH_TOO_SHORT.html  constant.INCOMING_UDP_NO_HEADER_FOUND.html  constant.INCOMING_UDP_PACKETS.html  constant.INCOMING_UDP_PACKET_ERRORS.html  constant.INCOMING_UDP_PACKET_SIZE.html  constant.NEUTRON_EVENTS.html  constant.OUTGOING_KAFKA_MESSAGES.html  constant.OUTGOING_KAFKA_MESSAGE_SIZE.html  constant.OUTGOING_KAFKA_PRODUCE_ERRORS.html  constant.PROCESSING_ERRORS.html  constant.PROCESSING_TIME.html  fn.initialize_metrics.html  index.html  sidebar-items.js
event_udp_to_kafka/testing/: constant.TESTING_TIMESTAMP.html  constant.TESTING_TIMESTAMP_NS_SINCE_EPOCH.html  fn.make_raw_neutron_udp_header.html  index.html  sidebar-items.js
event_udp_to_kafka/udp_message/: constant.END_OF_RUN_HEADER.html  constant.HEADER_LEN_BYTES.html  index.html  (+10 more)
search.index/: 014362de1b.js  1006731d7b.js  171f2abfd3.js  19033e053c.js  192c57ea97.js  1948e184db.js  1c6dbff568.js  2574c9b905.js  2c4883a366.js  2d43e317a9.js  2f6f4c00f2.js  31071cc73b.js  31feff9c2e.js  3529dcd42c.js  3692f10eb4.js  36b30b4ec4.js  372b57bf27.js  39b6daf361.js  41ec492057.js  44b9c56fe9.js  4b353a5af6.js  4b748385d7.js  4bc7b231c6.js  4c8a3b734d.js  5191bbe0a5.js  567190be89.js  5b58a1435d.js  5c3782c771.js  5f01b55955.js  613be1c4c8.js  682c35216d.js  6a60993470.js  6bf2127c4f.js  712d1e12ea.js  746baf307f.js  76f4555244.js  781e58f83a.js  791c2062c9.js  7e103fae2a.js  7e69570557.js  (+1 more)
src/: config.rs  data_processing.rs  gps_time.rs  header.rs  lib.rs  main.rs  metrics.rs  metrics_logger.rs  testing.rs  udp_message.rs
(+57 files in other folders)
