[package]
name = "rust-data-stream-processor"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
#opt-level = "z"

[dependencies]
#kafkas = { git = "https://github.com/iamazy/kafkas", branch = "main" }
#futures = "0.3.30"
clap = { version = "4.5.9", features = ["derive"] }
bytes = "1.7.1"
#indexmap = "2.4.0"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
chrono = "0.4.38"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
csv = "1.3.0"
flatbuffers = "24.3.25"
influxdb2 = "0.5.2"
#influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"