[package]
name = "rust-data-stream-processor"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
csv = "1.4.0"
influxdb2 = "0.5.2"
influxdb2-derive = "0.1.1"
isis_streaming_data_types = "0.1.1"
flatbuffers = "25.12.19"
log = "0.4.29"
env_logger = "0.11.10"

[target.'cfg(windows)'.dependencies]
rdkafka = { version="0.39.0", features = ["cmake_build"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { version="0.39.0", features = ["cmake_build", "curl", "ssl-vendored"] }

[dev-dependencies]
criterion = { version = "0.8.2",  features = ["html_reports"]}
hex = {version = "0.4.3"}

[[bench]]
name = "event_processing"
harness = false