[package]
name = "event-udp-to-kafka"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
csv = "1.4.0"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1" }
isis_streaming_data_types = "0.1.1"
flatbuffers = "25.12.19"
log = "0.4.29"
env_logger = "0.11.10"
itertools = "0.14.0"
clap-verbosity-flag = "3.0.4"
toml = "1.1.2"
strum = { version = "0.28.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
rdkafka = { version="0.39.0", features = ["cmake_build"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { version="0.39.0", features = ["cmake_build", "curl", "ssl-vendored"] }

[dev-dependencies]
criterion = { version = "0.8.2",  features = ["html_reports"]}

[[bench]]
name = "event_processing"
harness = false